--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
   <body>
     <h1>Starzyk Wars</h1>
     <nav>
+      <div class="links">
       <a href="index.html">YODA</a>
       <a href="gorgu.html">GORGU</a>
+      </div>
 
       <!-- add 3 page of starwars hero of your choice -->
     </nav>
     <!-- code here -->
-  
+  <div class="YODA1">
+
       <img src=image/9.png> <img src=image/8.png> <img src=image/7.png> 
-      
+      </div>
+      <div class="YODA2">
       <img src=image/6.png> <img src=image/5.png> <img src=image/4.png> 
-      
+      </div>
+ <div class="YODA3">
       <img src=image/3.png> <img src=image/2.png> <img src=image/1.png>
-   
+     </div>
     <br /><br />
     <hr />
     <a href="instruction.html">instructions</a>
