--- a/instruction.html
+++ b/instruction.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <div class="links">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    </div>
     <title>Static Template</title>
   </head>
   <body>
