--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="links">
       <a href="index.html">YODA</a>
       <a href="gorgu.html">GORGU</a>
+      <a href="third.html"> THIRD</a>
       </div>
 
       <!-- add 3 page of starwars hero of your choice -->
