--- a/gorgu.html
+++ b/gorgu.html
@@ -8,18 +8,19 @@
     <title>Static Template</title>
   </head>
   <body>
-    <div class="links2">
+    <h1>Starzyk Wars</h1>
+    <div class="click">
       <a href="index.html">YODA</a>
       <a href="gorgu.html">GORGU</a>
       <a href="third.html"> THIRD</a>
       </div>
-       <div class="GORGU1">
+       <div class="YODA1">
         <img src="image/row-1-column-1.png"><img src="image/row-1-column-2.png"><img src="image/row-1-column-3.png">
         </div>
-        <div class="GORGU2">
+        <div class="YODA2">
         <img src="image/row-2-column-1.png"><img src="image/row-2-column-2.png"><img src="image/row-2-column-3.png">
         </div>
-        <div class="GORGU3">
+        <div class="YODA3">
         <img src="image/row-3-column-1.png"><img src="image/row-3-column-2.png"><img src="image/row-3-column-3.png">
       </div>
         
