--- a/gorgu.html
+++ b/gorgu.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Starzyk Wars</h1>
-    <div class="click">
+    <div class="links">
       <a href="index.html">YODA</a>
       <a href="gorgu.html">GORGU</a>
       <a href="third.html"> THIRD</a>
